## Process this file with automake to produce Makefile.in

MYAPPNAME=edje_editor
SUBDIRS = src data

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
                       config.h.in config.sub configure install-sh \
                       ltconfig ltmain.sh missing mkinstalldirs depcomp \
                       stamp-h.in

EXTRA_DIST = README AUTHORS COPYING COPYING-PLAIN
