
MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
                config.h.in config.sub configure install-sh \
		depcomp libtool missing debian/changelog

EXTRA_DIST = README AUTHORS COPYING \
             debian/changelog \
             debian/changelog.in \
             debian/control \
             debian/copyright \
             debian/rules

SUBDIRS = data src

