## Process this file with automake to produce Makefile.in

SUBDIRS = src data

EXTRA_DIST = \
	README AUTHORS COPYING elicit.spec \
	debian/changelog \
	debian/rules debian/control debian/copyright \
	debian/elicit.files elicit.spec.in

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
                       config.h.in config.sub configure install-sh \
		       ltconfig ltmain.sh missing mkinstalldirs \
		       stamp-h.in debian/changelog elicit.spec

