ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src data

MAINTAINERCLEANFILES = \
Makefile.in \
aclocal.m4 \
compile \
config.guess \
config.h.in  \
config.sub  \
configure  \
depcomp \
install-sh \
ltmain.sh  \
missing  \
eet_docs.tar.gz \
m4/libtool.m4 \
m4/lt~obsolete.m4 \
m4/ltoptions.m4 \
m4/ltsugar.m4 \
m4/ltversion.m4

EXTRA_DIST = \
AUTHORS \
COPYING \
COPYING-PLAIN \
autogen.sh \
README

ICON = emage.png emage-16x16.png emage-32x32.png emage-64x64.png emage-128x128.png
DESKTOP = emage.desktop

icondir = $(datadir)/pixmaps
icon_DATA = $(ICON)

desktopdir = $(datadir)/applications
desktop_DATA = $(DESKTOP)


