## Process this file with automake to produce Makefile.in

SUBDIRS = src

EXTRA_DIST = README AUTHORS COPYING empower.spec
																	       

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
                       config.h.in config.sub configure install-sh \
		       ltconfig ltmain.sh missing mkinstalldirs \
		       stamp-h.in  empower.spec compile depcomp \
		       empower-*.tar.gz empower-*/
